--- a/index.html
+++ b/index.html
@@ -24,22 +24,21 @@
 <body>
   <div id="content">
     <div class="naglowek">
-      <div class="item" title="Bombs remaining">
-        <span class="fa fa-bomb"></span> <span id="iloscBomb"></span>
+      <div title="Bombs remaining">
+        <span class="fa fa-bomb"></span> <span id="liczbaBomb"></span>
       </div>
 
-      <div class="item" title="Time">
-        <span class="fa fa-clock-o"></span> <span id="czas"><span class="minuty">0</span>:<span
-            class="sekundy">00</span></span>
+      <div title="Time">
+        <span class="fa fa-clock-o"></span> <span id="czas"><span class="minuty">0</span>:<span class="sekundy">00</span></span>
       </div>
 
-      <div class="item" title="Restart">
+      <div title="Restart">
         <button class="reset disabled">
           <span class="fa fa-refresh"></span>
         </button>
       </div>
 
-      <div class="item pomoc" title="Help">
+      <div class="pomoc" title="Help">
         <span class="fa fa-question-circle"></span>
       </div>
     </div>
@@ -78,24 +77,8 @@
         <td></td>
         <td></td>
         <td></td>
-        <td></td>
-        <td></td>
       </tr>
       <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
         <td></td>
         <td></td>
         <td></td>
@@ -114,24 +97,8 @@
         <td></td>
         <td></td>
         <td></td>
-        <td></td>
-        <td></td>
       </tr>
       <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
         <td></td>
         <td></td>
         <td></td>
@@ -150,6 +117,14 @@
         <td></td>
         <td></td>
         <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
         <td></td>
         <td></td>
       </tr>
@@ -162,24 +137,8 @@
         <td></td>
         <td></td>
         <td></td>
-        <td></td>
-        <td></td>
       </tr>
       <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
         <td></td>
         <td></td>
         <td></td>
