--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <main class="hidden">
     <nav>
       <div title="Bombs remaining">
-        <span class="fa fa-bomb"></span> <span id="liczbaBomb"></span>
+        <span class="fa fa-bomb"></span> <span id="bomb-counter"></span>
       </div>
 
       <div title="Time">
