Improve aside UI

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
       </div>
 
       <div class="mobile">
-        Tap the field to uncover it
+        <kbd>Tap</kbd> the field to uncover it
         <br>
-        Hold it to mark it
+        <kbd>Hold</kbd> it to mark it
       </div>
     </aside>
 
