--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
       </div>
 
       <div title="Time">
-        <span class="fa fa-clock-o"></span> <span id="czas"><span class="minuty">0</span>:<span class="sekundy">00</span></span>
+        <span class="fa fa-clock-o"></span> <span id="czas"><span class="minuty">0</span>:<span
+            class="sekundy">00</span></span>
       </div>
 
       <div title="Restart">
@@ -44,26 +45,28 @@
     </nav>
 
     <aside>
-      <h1>
-        <span class="fa fa-bomb"></span>
-      </h1>
+      <div>
+        <h1>
+          <span class="fa fa-bomb"></span>
+        </h1>
 
-      <p>Click on a field and you'll see how many bombs surrounds it.</p>
-      <p>If you think there's a bomb somewhere, mark the field with a flag.</p>
-      <p>To win, you must mark all the bombs and uncover all the fields.</p>
+        <p>Click on a field and you'll see how many bombs surrounds it.</p>
+        <p>If you think there's a bomb somewhere, mark the field with a flag.</p>
+        <p>To win, you must mark all the bombs and uncover all the fields.</p>
 
-      <div class="desktop">
-        <kbd>Left mouse button</kbd> uncover field
-        <br>
-        <kbd>Right mouse button</kbd> mark field
-        <br>
-        <kbd>Shift</kbd> + <kbd>Left mouse button</kbd> uncover all fields adjacent to the one alredy uncovered
-      </div>
+        <div class="desktop">
+          <kbd>Left mouse button</kbd> uncover field
+          <br>
+          <kbd>Right mouse button</kbd> mark field
+          <br>
+          <kbd>Shift</kbd> + <kbd>Left mouse button</kbd> uncover all fields adjacent to the one alredy uncovered
+        </div>
 
-      <div class="mobile">
-        <kbd>Tap</kbd> the field to uncover it
-        <br>
-        <kbd>Hold</kbd> it to mark it
+        <div class="mobile">
+          <kbd>Tap</kbd> the field to uncover it
+          <br>
+          <kbd>Hold</kbd> it to mark it
+        </div>
       </div>
     </aside>
 
