--- a/index.html
+++ b/index.html
@@ -22,176 +22,56 @@
 </head>
 
 <body>
-  <div id="content">
-    <div class="naglowek">
-      <div class="item" title="Bombs remaining">
-        <span class="fa fa-bomb"></span> <span id="iloscBomb"></span>
+  <main class="hidden">
+    <nav>
+      <div title="Bombs remaining">
+        <span class="fa fa-bomb"></span> <span id="bomb-counter"></span>
       </div>
 
-      <div class="item" title="Time">
+      <div title="Time">
         <span class="fa fa-clock-o"></span> <span id="czas"><span class="minuty">0</span>:<span
             class="sekundy">00</span></span>
       </div>
 
-      <div class="item" title="Restart">
+      <div title="Restart">
         <button class="reset disabled">
           <span class="fa fa-refresh"></span>
         </button>
       </div>
 
-      <div class="item pomoc" title="Help">
+      <div class="pomoc" title="Help">
         <span class="fa fa-question-circle"></span>
       </div>
-    </div>
+    </nav>
 
-    <div class="sterowanie">
-      <h1>
-        <span class="fa fa-bomb"></span>
-      </h1>
+    <aside>
+      <div>
+        <h1>
+          <span class="fa fa-bomb"></span>
+        </h1>
 
-      <p>Click on a field and you'll see how many bombs surrounds it.</p>
-      <p>If you think there's a bomb somewhere, mark the field with a flag.</p>
-      <p>To win, you must mark all the bombs and uncover all the fields.</p>
+        <p>Click on a field and you'll see how many bombs surrounds it.</p>
+        <p>If you think there's a bomb somewhere, mark the field with a flag.</p>
+        <p>To win, you must mark all the bombs and uncover all the fields.</p>
 
-      <div class="desktop">
-        <kbd>Left mouse button</kbd> uncover field
-        <br>
-        <kbd>Right mouse button</kbd> mark field
-        <br>
-        <kbd>Shift</kbd> + <kbd>Left mouse button</kbd> uncover all fields adjacent to the one alredy uncovered
+        <div class="desktop">
+          <kbd>Left mouse button</kbd> uncover field
+          <br>
+          <kbd>Right mouse button</kbd> mark field
+          <br>
+          <kbd>Shift</kbd> + <kbd>Left mouse button</kbd> uncover all fields adjacent to the one alredy uncovered
+        </div>
+
+        <div class="mobile">
+          <kbd>Tap</kbd> the field to uncover it
+          <br>
+          <kbd>Hold</kbd> it to mark it
+        </div>
       </div>
+    </aside>
 
-      <div class="mobile">
-        Tap the field to uncover it
-        <br>
-        Hold it to mark it
-      </div>
-    </div>
-
-    <table id="tabela">
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-    </table>
-
-  </div>
+    <div id="grid"></div>
+  </main>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
