Add close button to aside

--- a/index.html
+++ b/index.html
@@ -25,12 +25,11 @@
   <main class="hidden">
     <nav>
       <div title="Bombs remaining">
-        <span class="fa fa-bomb"></span> <span id="bomb-counter"></span>
+        <span class="fa fa-bomb"></span><span id="bomb-counter"></span>
       </div>
 
       <div title="Time">
-        <span class="fa fa-clock-o"></span> <span id="czas"><span class="minuty">0</span>:<span
-            class="sekundy">00</span></span>
+        <span id="czas"><span class="minuty">0</span>:<span class="sekundy">00</span>
       </div>
 
       <div title="Restart">
@@ -46,20 +45,22 @@
 
     <aside>
       <div>
+        <span class="fa fa-times-circle"></span>
+
         <h1>
           <span class="fa fa-bomb"></span>
         </h1>
 
-        <p>Click on a field and you'll see how many bombs surrounds it.</p>
+        <p>Click on a field to see how many bombs surrounds it.</p>
         <p>If you think there's a bomb somewhere, mark the field with a flag.</p>
         <p>To win, you must mark all the bombs and uncover all the fields.</p>
 
         <div class="desktop">
-          <kbd>Left mouse button</kbd> uncover field
+          <kbd>Left mouse</kbd> uncover field
           <br>
-          <kbd>Right mouse button</kbd> mark field
+          <kbd>Right mouse</kbd> mark field
           <br>
-          <kbd>Shift</kbd> + <kbd>Left mouse button</kbd> uncover all fields adjacent to the one alredy uncovered
+          <kbd>Shift</kbd> + <kbd>Left mouse</kbd> uncover all fields adjacent to the one alredy uncovered
         </div>
 
         <div class="mobile">
