--- a/index.html
+++ b/index.html
@@ -32,15 +32,9 @@
         <span id="czas"><span class="minuty">0</span>:<span class="sekundy">00</span>
       </div>
 
-      <div title="Restart">
-        <button class="reset disabled">
-          <span class="fa fa-refresh"></span>
-        </button>
-      </div>
+      <div class="reset clickable disabled fa fa-refresh" title="Restart"></div>
 
-      <div class="pomoc" title="Help">
-        <span class="fa fa-question-circle"></span>
-      </div>
+      <div class="pomoc clickable fa fa-question-circle" title="Help"></div>
     </nav>
 
     <aside>
